# Construction-of-Car-Cloud-Communication-Website-Based-on-TLS

./: README.md
go_backend/: go.mod  go.sum  main.go
go_backend/config/: config.go  database.yml
go_backend/handler/: auth.go  data.go  deep_video.go  message.go  video.go
go_backend/middleware/: auth_required.go
go_backend/models/: user.go
go_backend/templates/: deep_video.html  index.tmpl  mainmenu.tmpl  message.html  video.html
ugv_sdk/: CHANGELOG.md  CMakeLists.txt  doxyfile  package.xml
ugv_sdk/cmake/: ugv_sdkConfig.cmake.in
ugv_sdk/sample/: CMakeLists.txt
ugv_sdk/sample/bunker_demo/: CMakeLists.txt  bunker_robot_demo.cpp
ugv_sdk/sample/hunter_demo/: CMakeLists.txt  hunter_robot_demo.cpp
ugv_sdk/sample/ranger_demo/: CMakeLists.txt  ranger_robot_demo.cpp
ugv_sdk/sample/scout_demo/: CMakeLists.txt  scout_mini_omni_demo.cpp  scout_robot_demo.cpp  scout_robot_v3.cpp
ugv_sdk/sample/tracer_demo/: CMakeLists.txt  tracer_robot_demo.cpp
ugv_sdk/sample/utils_demo/: CMakeLists.txt  demo_protocol_detector.cpp  demo_robot_version.cpp
ugv_sdk/scripts/: bringup_can2usb_1m.bash  bringup_can2usb_500k.bash  setup_can2usb.bash
ugv_sdk/src/async_port/: async_can.cpp  async_serial.cpp
ugv_sdk/src/mobile_robot/: bunker_robot.cpp  hunter_robot.cpp  ranger_robot.cpp  scout_robot.cpp
ugv_sdk/src/protocol_v1/: agilex_msg_parser_v1.c  agilex_protocol_v1.h
ugv_sdk/src/protocol_v2/: agilex_msg_parser_v2.c  agilex_msg_parser_v2.h  agilex_protocol_v2.h  protocol_v2_parser.cpp
ugv_sdk/test/: CMakeLists.txt  scout_memory_check.cpp
(+32 files in other folders)
